--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.11",
+    "papaparse": "^4.6.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-grid-layout": "^0.16.6",
     "react-scripts": "2.1.3"
   },
   "scripts": {
